Working chat through rabbit MQ

--- a/html/form.html
+++ b/html/form.html
@@ -8,7 +8,7 @@
             <label for="data">Data to queue:</label>
             <input type="text" id="email" name="data" value="Hello World" placeholder="Enter your data to queue" />
             <br />
-            <input type="submit" value="Create Profile" />
+            <input type="submit" value="Send Message" />
          </fieldset>
       </form>
    </body>
