--- a/html/reader.html
+++ b/html/reader.html
@@ -18,11 +18,11 @@
       $(function () {
         var socket = io();
         $('form').submit(function(){
-          socket.emit('chat message', $('#m').val());
+          socket.emit('chat submit', $('#m').val());
           $('#m').val('');
           return false;
         });
-        socket.on('chat message', function(msg){
+        socket.on('chat received', function(msg){
           $('#messages').append($('<li>').text(msg));
         });
       });
